Agrego resp estadistica y acorte lo de Teze

--- a/3° Año/Metodología de Sistemas I/Unidad 9/3. SCUM.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 9/3. SCUM.md
@@ -37,4 +37,4 @@ Dentro de esa estructura encontramos una serie de roles, dentro de los cuales se
 1. **Sprint Planinig**: Se define el ***Sprint Backlog***, es decir, las tareas que se van a implementar para ese ***incremento,*** se define la duración del sprint y la fecha de la reunión de revisión. Esta reunión marca el inicio de cada sprint y por lo general es el ***Scrum Master*** el responsable de su organización y gestión.
 2. **Daily Scrum**: Es una reunión diaria que se lleva a cabo durante un Sprint, tiene como objetivo sincronizar, revisar y adaptar. Suelen durar alrededor de 15 minutos y siempre se realiza a la misma hora. En estas reuniones cada miembro del equipo responde a tres preguntas: ¿Qué hice ayer?, ¿Qué voy a hacer hoy?, y ¿Qué impedimentos tengo?.
 3. **Sprint Review**: Es una reunión, de una duración máxima de 4 horas, que se realiza al final de cada sprint entre el equipo y las partes interesadas, para mostrar el incremento construido, su principal función es la de generar retroalimentación entre todos los participantes y adaptar los siguientes ciclos de desarrollo, maximizando el valor del producto desarrollado. Suele incluir una demo del producto.
-4. **Sprin Restrospective**: Es una reunión que se lleva a cabo al final de cada ciclo de desarrollo, esta reunión va destinada a revisar la adecuación del propio proceso de Scrum utilizado y proponer mejoras al proceso de desarrollo, es por eso que en esta etapa participan los integrantes de todos los roles.
+4. **Sprint Restrospective**: Es una reunión que se lleva a cabo al final de cada ciclo de desarrollo, esta reunión va destinada a revisar la adecuación del propio proceso de Scrum utilizado y proponer mejoras al proceso de desarrollo, es por eso que en esta etapa participan los integrantes de todos los roles.
