Correcciones en LP y MI

--- a/3° Año/Lenguajes de Programación/Unidad 6/1. Unidades.md
+++ b/3° Año/Lenguajes de Programación/Unidad 6/1. Unidades.md
@@ -1,4 +1,4 @@
-Las unidades son el mecanismo que proporcionan los lenguajes de programación mediante los cuales, los programadores pueden separar un programa en programas más pequeños siguiendo cierta coherencia y lógica. Esto le otorga a los lenguajes mayor eficiencia, legibilidad y verificación.
+Las unidades son el mecanismo que proporcionan los lenguajes de programación mediante los cuales, los programadores pueden separar un programa en subprogramas más pequeños siguiendo cierta coherencia y lógica. Esto le otorga a los lenguajes mayor eficiencia, legibilidad y verificación.
 ## Abstracción de Procesos
 
 Retomando los conceptos de la [[1. Evolución de los Lenguajes de Programación#Lenguajes de Programción y Arquitectura de las Computadoras | Unidad 1]], a nivel estructural, las funciones y los procedimientos eran los mecanismos mediante el cual los lenguajes brindaban abstracción de proceso.
@@ -35,7 +35,7 @@ Ahora bien, el pasaje de parámetros posee cierta semántica, de la cual derivan
 
 ![[Screenshot_20230901_135735.png]]
 
-De estos modelos semánticos se desprenden los dos grandes modelos de pasajes de parámetros que conocemos hoy en día, el pasaje ***por copia de valor*** y el pasaje ***por referencia***, que al mismo tiempo poseen variantes.
+De estas distintas semánticas se desprenden los dos grandes modelos de pasajes de parámetros que conocemos hoy en día, el pasaje ***por copia de valor*** y el pasaje ***por referencia***, que al mismo tiempo poseen variantes.
 
 - **Por copia de valor**: Este tipo de métodos es mucho más seguro, ya que se protege al parámetro real y permite usar expresiones como parámetro real en el llamado a la unidad, con la desventaja de que a nivel de memoria es mucho más costoso.
 	- **Por valor**: El valor del parámetro real se copia en el formal y una vez se termina de ejecutar el parámetro real se mantiene intacto. Semántica ***in-mode***.
@@ -46,7 +46,7 @@ De estos modelos semánticos se desprenden los dos grandes modelos de pasajes de
 	- **Nombre**: La unidad llamadora le pasa a la unidad llamada la dirección del parámetro real, con la diferencia que la ligadura del parámetro formal a esa celda de memoria se realiza cada vez que es referenciada dicha variable, este método es el más flexible, pero es complicado de implementar y es muy lento. Semántica ***inout-mode***.
 #### Unidades como Parámetros
 
-Algunos lenguajes de programación permiten pasar unidades como parámetros de otras unidades, este tipo de cosas es más común entre lenguajes funcionales. Ahora bien, se debe tener en cuenta un par de aspectos a la hora de implementar este tipo de características, en primer lugar se debe saber como se va a realizar el chequeo de tipos al momento de llamar esa unidad dentro de la unidad llamada, además se debe pensar en como se va a resolver él entorno de referenciamiento de esa función pasada como parámetro, para eso existen 3 mecanismos que pueden emplear los lenguajes de programación:
+Algunos lenguajes de programación permiten pasar unidades como parámetros de otras unidades, este tipo de cosas es más común entre lenguajes funcionales. Ahora bien, se debe tener en cuenta un par de aspectos a la hora de implementar este tipo de características, en primer lugar se debe saber como se va a realizar el chequeo de tipos al momento de llamar esa unidad dentro de la unidad llamada, además se debe pensar en como se va a resolver él referenciamiento a las variables no locales utilizadas en la unidad, para eso existen 3 mecanismos que pueden emplear los lenguajes de programación:
 
 - **Ligadura Superficial**: El entorno de referenciamiento tiene lugar en la unidad que realiza el llamado de la otra unidad.
 - **Ligadura Profunda**: El entorno de referenciamiento está compuesto por todas las variables que forman parte del entorno de definición de la unidad.
@@ -58,14 +58,14 @@ Son aquellas unidades que poseen el mismo nombre que otra unidad y comparten el 
 
 ## Unidades Genéricas
 
-Son aquellas unidades que pueden tomar parámetros de tipos diferentes en distintos llamados, en este caso existen dos tipos de polimorfismos que se aplican a las unidades, uno es el polimorfismo Ad-Hoc, en el cual de acuerdo al tipo de dato pasado como parámetro la unidad va a realizar su ejecución de una manera u otra, y por el otro el polimorfismo paramétrico, donde solo va a cambiar el tipo de dato aceptado por la unidad.
+Son aquellas unidades que pueden tomar parámetros de tipos diferentes en distintos llamados, en este caso existen dos tipos de polimorfismos que se aplican a las unidades, uno es el polimorfismo Ad-Hoc, en el cual de acuerdo al tipo de dato pasado como parámetro la unidad va a realizar su ejecución de una manera u otra, y por el otro el polimorfismo paramétrico, donde solo va a cambiar el tipo de dato con el que va a operar la unidad.
 
 ---
 
 ## Constructores de Encapsulamiento
 
 A medida que los programas se van volviendo más y más grandes, los diferentes lenguajes deben brindar un mecanismo mediante el cual se pueda organizar todo el programa de una manera lógica, y que permita reutilizar el código escrito.
-Para responder a estas necesidades, los lenguajes crearon mecanismos que permite agrupar distintas unidades relacionadas en un mismo lugar, de modo que puedan ser compilados por separado sin necesidad de compilar todo el programa cada vez que se modifica algo de estas unidades. De esto se desprende dos maneras de compilar que emplean los lenguajes, entre ellas están:
+Para responder a estas necesidades, los lenguajes crearon mecanismos que permite agrupar distintas unidades relacionadas en un mismo lugar, de modo que puedan ser compilados por separado cada vez que se modifica algo de estas unidades. De esto se desprende dos maneras de compilar que emplean los lenguajes, entre ellas están:
 
 - **Compilación separada**: En la compilación separada, las unidades se compilan siguiendo un orden, un lenguaje que utiliza este mecanismo es ADA.
 - **Compilación Independiente**: Se compilan las unidades sin seguir un orden especifico.
