--- a/3° Año/Metodología de la Investigación/1. Introducción.md
+++ b/3° Año/Metodología de la Investigación/1. Introducción.md
@@ -1,26 +1,25 @@
 ### ¿Qué es la Investigación?
 
-En sí la investigación es el proceso de coleccionar, analizar e interpretar información para responder preguntas y/o resolver problemas, que al mismo tiempo generan conocimiento. Este proceso de investigación debe tener ciertas características, entre ellas, debe ser un proceso: controlado, sistemático, válido y demostrable, empírico y verificable, critico y revisable.
+La investigación es el proceso de coleccionar, analizar e interpretar información para responder preguntas y/o resolver problemas, que al mismo tiempo generan conocimiento. Este proceso de investigación debe tener ciertas características, entre ellas, debe ser un proceso: controlado, sistemático, válido y demostrable, empírico y verificable, critico y revisable.
 ***Investigación científica*** es el nombre general que recibe, el largo y complejo proceso en el cual los avances científicos son el resultado de la aplicación del **método científico** para resolver problemas o tratar de explicar determinadas observaciones.
-### ¿Qué es la Investigación en la Ciencia de la Computación?
+#### ¿Qué es la Investigación en la Ciencia de la Computación?
 
 Las ***Ciencias de la Computación*** es tanto una disciplina académica como una disciplina científica. La cual cuenta con un dominio u objeto de estudio y  una serie de métodos para estudiar dicho dominio.
 La definición de Ciencia de la Computación incluye “estudio sistemático”. A través de la investigación.
 
->[!quote] Cita de Wikipedia
->Las ciencias de la computación o ciencias de la informática son las ciencias formales que abarcan las bases teóricas de la información y la computación, así como su aplicación en sistemas computacionales. El cuerpo de conocimiento de las ciencias de la computación es frecuentemente descrito como el estudio sistemático de los procesos algorítmicos que describen y transforman información: su teoría, análisis, diseño, eficiencia, implementación, algoritmos sistematizados y aplicación. En términos más específicos se trata del estudio sistemático de la factibilidad, estructura, expresión y mecanización de procedimientos metódicos o algoritmos que subyacen en la adquisición, representación, procesamiento, almacenamiento, comunicación y acceso a la información.
+>[!quote] Resumen de Wikipedia
+>Las ciencias de la computación abordan la teoría y aplicación de los sistemas computacionales, centrándose en el estudio sistemático de los algoritmos y procesos que manipulan y transforman la información, incluyendo su eficiencia, diseño e implementación.
 
-### Diferencia entre Científico e Ingeniero
-
-Un científico ve un fenómeno y se pregunta “¿por qué?” y procede a investigar una respuesta para esa pregunta.
-Mientras que un ingeniero ve un problema práctico y quiere saber “cómo” resolverlo y “cómo” implementar esa solución, o “cómo hacerlo mejor” si esa solución existe.
+>[!tldr] Diferencia entre Científico e Ingeniero
+>Un científico ve un fenómeno y se pregunta “¿por qué?” y procede a investigar una respuesta para esa pregunta.
+>Mientras que un ingeniero ve un problema práctico y quiere saber “cómo” resolverlo y “cómo” implementar esa solución, o “cómo hacerlo mejor” si esa solución existe.
 
 ### Metodología de la Investigación Genérica
 
-1. **Plantear** el problema en el contexto de conocimiento existente (teoría y observaciones). El caso típico es que aparece un nuevo problema, pero las teorías existentes ayudan a resolverlo. La investigación surge cuando la teoría existente no puede y/o no ayuda a resolverlo. Esto nos lleva a formular nuevas teorías.
+1. **Plantear** el problema en el contexto de conocimiento existente (teoría y observaciones). La investigación surge cuando la teoría existente no puede y/o no ayuda a resolverlo. Esto nos lleva a formular nuevas teorías.
 2. **Formular** hipótesis como una respuesta tentativa.
 3. **Deducir** consecuencias y hacer predicciones.
-4. **Testear** la hipótesis en un experimento de un campo teórico específico. Las nuevas hipótesis deben ser demostradas, ya sea formalmente o empíricamente, para adecuarse a la nueva visión del mundo. Si las hipótesis llevan a contradicciones y demandan un cambio crítico en la teoría de base existente, éstas deben ser testeadas cuidadosamente. Las nuevas hipótesis tiene que ser superadoras y ofrecer ventajas con el fin de reemplazar el paradigma científico existente. Se debe ciclar en los pasos 2, 3 y 4 con modificaciones de las hipótesis hasta obtener un resultado satisfactorio que nos lleve a 5. Si las discrepancias son muy grandes, probablemente, se debe recomenzar el proceso desde el Paso 1.
+4. **Testear** la hipótesis con un experimento específico, demostrando su validez, ya sea de manera formal o empíricamente para ajustarse a una nueva perspectiva del mundo. Si se generan contradicciones, se debe evaluar críticamente dicha hipótesis hasta que propongan un avance significativo en el paradigma actual. Este proceso es iterativo, y muchas veces puede requerir empezar desde el principio si las discrepancias son sustanciales.
 5. Cuando se obtienen resultados consistentes con las hipótesis, la misma se constituye en una teoría y proporciona un conjunto coherente de proposiciones que definen una nueva clase de fenómenos o concepto teórico.
 6. Los resultados tienen que ser publicados.
 7. La nueva teoría es objeto de un proceso de "selección natural" entre las teorías que compiten con ella. Una teoría está convirtiendo entonces un marco dentro del cual las observaciones/hechos teóricos se explican y permitan hacer predicciones. El proceso puede comenzar nuevamente desde el principio, pero el estado 1 ha cambiado para incluir la nueva teoría o mejoras de la teoría anterior.
@@ -43,7 +42,7 @@ El objetivo de la investigación científica es el desarrollo de nuevo conocimie
 - **Básico**: Sin una aplicación puntual definida a priori, en la investigación básica nosotros nos enfocamos en generar nuevos conocimientos, pero nosotros no lo hacemos con el fin de aplicar esos conocimientos a un campo específico. Por Ej.: Teoría de Juegos de John Nash
 - **Aplicado**: La resolución puntual de un problema a través de la aplicación de conocimiento básico, en la investigación aplicada, los investigadores toman distintas teorías, teoremas o lemas y lo aplican a situaciones cualquiera con el fin de ver si estas resultan útiles para la resolución de ese problema. Por Ej.: Aplicación de Teoría de Juegos en resolución de conflictos políticos en Medio Oriente.
 
-El conocimiento científico generado a través de una investigación, empleando el método científico, se organiza usualmente en teorías. Estas teorías son una serie de modelos o *frameworks* lógicamente auto-consistente que describe el comportamiento de cierto fenómeno natural o social, ya sea que se origine de hechos observables o esté sustentado en ellos.
+El conocimiento científico generado a través de una investigación, empleando el método científico, se organiza usualmente en teorías. Estas teorías son una serie de modelos o *frameworks* auto-consistente que describe el comportamiento de cierto fenómeno natural o social, ya sea que se origine de hechos observables o esté sustentado en ellos.
 Las teorías científicas establecidas que forman parte del conocimiento científico han soportado rigurosos testeos para llegar a tal estatus. Por lo general, estas teorías deben cumplir una serie de requisitos para ser consideradas una "buena teoría", estos requisitos son:
 
 - **Consistencia**: Es consistente con las teorías preexistentes al punto de que la teoría preexistente fue verificada experimentalmente, aunque pudiendo demostrar que la teoría preexistente era “equivocada” en un sentido exacto (ej. Teoría de Newton para los cuerpos celestes).
