--- a/3° Año/Metodología de la Investigación/2. Modelos Científicos.md
+++ b/3° Año/Metodología de la Investigación/2. Modelos Científicos.md
@@ -18,14 +18,14 @@ La investigación está planteada para extender el cuerpo de conocimiento y comp
 
 El objetivo específico de una investigación puede ser de diversos tipos. Una clasificación clásica divide a los objetivos de un proceso de investigación en:
 
-- **Descripción**: Se refiere a los procesos usados para definir, clasificar y categorizar cosas y sus relaciones. Permite establecer generalizaciones y universalidades, estas descripciones deben ser sistemáticas y precisas, es decir, no dar ligar a ambigüedades y además debe caracterizar eventos y conceptos en términos de operaciones observables o procedimientos utilizados para medirlas. Sin obviar que esta descripción debe enfocarse en objetivos reales.
+- **Descripción**: Se refiere a los procesos usados para definir, clasificar y categorizar cosas y sus relaciones. Permite establecer generalizaciones y universalidades, estas descripciones deben ser sistemáticas y precisas, además debe caracterizar eventos y conceptos en términos de operaciones observables o procedimientos utilizados para medirlas. Sin obviar que esta descripción debe enfocarse en objetivos reales.
 - **Predicción**: Realizada a través del planteo de hipótesis, permitiendo realizar predicciones tentativas acerca de las relaciones entre variables que deben ser medibles. Cuando una variable se puede usar para predecir el comportamiento de otra, décimos que las mismas están ***correlacionadas***, detectar correlaciones puede ser el objetivo de una investigación.
 - **Explicación/entendimiento**: Posiblemente, el objetivo más importante de la investigación, involucra identificar las causas de un fenómeno. El identificar relaciones causales involucra tres aspectos principales:
 	- Las variables deben correlacionarse. Se debe tener en cuenta la posibilidad del azar.
-	- Secuencia de orden de tiempo adecuada, la causa debe preceder al efecto, es decir, para que 2 suceda a causa de 1, 1 debe preceder a 2 en toda ocasión.
+	- La causa debe preceder al efecto, es decir, para que 2 suceda a causa de 1, 1 debe preceder a 2 en toda ocasión.
 	- Eliminación de causas alternativas plausibles, para que la relación entre A y B sea verdadera, no debe existir un C causal de ambos A y B tal que al controlar la variable C la relación entre A y B desaparece. Este paso en particular es el punto más dificultoso.
 
->[!note] Nota de Clase
+>[!note] Nota
 >Cabe acarar que muchas veces un trabajo científico no se enmarca solo en uno de estos objetivos, sino que en un mismo artículo se puede realizar una descripción y una explicación, todo va a depender del enfoque que le dé el investigador.
 ## Modelos de Procesos de Investigación
 
@@ -69,12 +69,12 @@ El modelo de proceso de investigación evolutivo reconoce que la investigación 
 El modelo de proceso evolutivo es el que mejor describe el proceso
 “real” de investigación. Si bien el modelo evolutivo permite que “las reglas de juego” cambien a lo largo del tiempo, ¡esto no implica que no haya reglas!
 
-#### Método Científico
+### Método Científico
 
-El método científico se refiere a la serie de etapas que hay que recorrer para obtener un conocimiento válido desde el punto de vista científico, utilizando para esto instrumentos que resulten fiables. Lo que hace este método es minimizar la influencia de la subjetividad del científico en su trabajo. El método científico está basado en dos preceptos que determinan la utilidad del mismo como elemento de creación de conocimiento, la ***reproducibilidad*** y la ***refutabilidad***, estos elementos son los pilares fundamentales para el objetivo de la reducción de la subjetividad.
+El método científico es un proceso, es decir, un conjunto de pasos que se debe seguir para obtener conocimiento válido desde una perspectiva científica, haciendo uso de instrumentos confiables y reduciendo la influencia de la subjetividad del científico en su trabajo. Este método se basa en dos pilares clave: la ***reproducibilidad*** y la ***refutabilidad***, que son fundamentales para reducir la subjetividad y crear conocimiento confiable.
 La reproducibilidad implica la capacidad de repetir un determinado experimento, en cualquier lugar y por cualquier persona.  Este pilar se basa, esencialmente, en la comunicación y publicidad de los resultados obtenidos, y su verificación por la comunidad científica.
-La refutabilidad, implica que toda proposición científica debe ser susceptible de ser refutada, siendo la falsabilidad el *modus tollendo tollens* del método hipotético-deductivo experimental. En otras palabras, el método científico rechaza las verdades absolutas, por lo tanto, las proposiciones científicas nunca pueden considerarse absolutamente verdaderas, sino a lo sumo no refutadas.
-No todo descubrimiento surge de un proceso “inmaculado” de aplicación del método científico, según [Wikipedia](https://es.wikipedia.org/wiki/Método_científico#Rol_en_las_posibilidades_del_des), entre un tercio y la mitad de los descubrimientos científicos son hallados debido a la “casualidad”. De acuerdo a Dunbar, K., & Fugelsang, J. (2005), es normal que los científicos declaren haber tenido “suerte”, sin embargo, podríamos pensar que esto en realidad es una “casualidad causal”.
+La refutabilidad, implica que toda proposición científica debe ser susceptible de ser refutada. En otras palabras, el método científico rechaza las verdades absolutas, por lo tanto, las proposiciones científicas nunca pueden considerarse absolutamente verdaderas, sino a lo sumo no refutadas.
+No todo descubrimiento surge de un proceso “inmaculado” de aplicación del método científico, según [Wikipedia](https://es.wikipedia.org/wiki/Método_científico#Rol_en_las_posibilidades_del_des), entre un tercio y la mitad de los descubrimientos científicos son hallados debido a la “casualidad”.
 La investigación utiliza la heurística para aprovechar lo inesperado, a esto se lo denomina *antifragilidad*. Los investigadores, al encontrar errores persistentes en sus experimentos, cuestionan sus métodos. Cuando un error se repite mucho, lo ven como algo más que una coincidencia. El método científico, con su rigor y cautela, ayuda a identificar estos errores. Luego, buscan explicaciones teóricas, a menudo consultando a expertos de otros campos. El método científico está compuesto de los siguientes elementos:
 
 - **Caracterizaciones**: Cuantificaciones, observaciones y medidas.
