--- a/3° Año/Metodología de la Investigación/3. Proceso Metodológico y sus Dimensiones.md
+++ b/3° Año/Metodología de la Investigación/3. Proceso Metodológico y sus Dimensiones.md
@@ -11,9 +11,10 @@ En cambio, defender teorías por deducción o también llamada top-down, lo que 
 
 ## Metodología en la Investigación
 
-El hecho de investigar involucra Metodologías y Técnicas. La ***metodología*** incluye el estudio de varios métodos que son aplicables a una clase de problemas. Las técnicas, por su parte, se refiere a herramientas específicas que permiten adquirir conocimiento, análisis de datos, así como inferencias que pueden ser hechas.
+La ***metodología*** incluye el estudio de varios métodos que son aplicables a una clase de problemas. Las técnicas, por su parte, se refiere a herramientas específicas que permiten adquirir conocimiento, análisis de datos, así como inferencias que pueden ser hechas.
 La metodología ***dependiendo de la motivación***. Si se desea realizar una **investigación básica**, contribuye a un entendimiento teórico profundo y una formulación más abstracta del fenómeno estudiado. Mientras que si se desea realizar una **investigación Instrumental**, contribuye a la intervención humana en entornos del mundo real, aquí dos categorías son identificadas, la investigación aplicada y Investigación orientada a problemas.
 Al mismo tiempo, va ***dependiendo de acuerdo a la Teoría Subyacente***.
+
 - **Descriptivo**, de todos los aspectos significativos del dominio.
 - **Explicativo**, del comportamiento del fenómeno estudiado.
 - **Predictivo**, del comportamiento futuro del fenómeno.
