--- a/3° Año/Lenguajes de Programación/Unidad 6/2. Estructuras de Control a Nivel Unidad.md
+++ b/3° Año/Lenguajes de Programación/Unidad 6/2. Estructuras de Control a Nivel Unidad.md
@@ -1,5 +1,4 @@
-
-Al momento de ejecutar una determinada unidad, existes diversas variedades de métodos para la ejecución y control de estas unidades, a grandes rasgos estas se pueden encasillar en dos categorías, las que la transferencia de control se realiza de forma ***explícita***, es decir, es invocada por el programador, y la ***implícita***, que son invocadas automáticamente por la ocurrencia de algún suceso o hecho.
+Al momento de ejecutar una determinada unidad, existes diversas variedades de métodos para la ejecución y control de estas unidades, a grandes rasgos estas se pueden encasillar en dos categorías, aquellas donde la transferencia de control se realiza de forma ***explícita***, es decir, es invocada por el programador, y la ***implícita***, que son invocadas automáticamente por la ocurrencia de algún suceso o hecho.
 
 ## Estructuras de control Explícito
 
@@ -9,7 +8,7 @@ En este tipo de unidades existe una subordinación de la unidad llamadora, esto 
 
 ##### Simétricas
 
-En este tipo de unidades existe una unidad que las llama y una vez que eso ocurre se empiezan a llamar explícitamente unas a otras, este tipo de control se caracteriza por no delegar la ejecución, es decir, una unidad no termina de ejecutarse en su totalidad para devolver el control a otra, sino que se ejecuta una porción de su código y luego se pone en espera mientras otra unidad de este estilo es ejecutada. Este tipo de estructuras se caracteriza por tener más de un punto de entrada y de retorno, además de ser sensibles a la historia, ya que se necesita mantener el ambiente de la ejecución para poder retomar luego en el momento exacto en donde se quedó la ejecución.
+En este tipo de unidades existe una unidad que realiza el primer llamado y una vez que eso ocurre se empiezan a llamar explícitamente, las unidades unas a otras, este tipo de control se caracteriza por no delegar la ejecución, es decir, una unidad no termina de ejecutarse en su totalidad para devolver el control a otra, sino que se ejecuta una porción de su código y luego se pone en espera mientras otra unidad es ejecutada. Este tipo de estructuras se caracteriza por tener más de un punto de entrada y de retorno, además de ser sensibles a la historia, ya que se necesita mantener el ambiente de la ejecución para poder retomar luego en el momento exacto en donde se quedó la ejecución.
 
 ![[LP-corrutinas.png]]
 
@@ -24,7 +23,7 @@ Este tipo de unidades pueden ser planificadas para que su ejecución ocurra lueg
 
 ##### Paralelas
 
-Este tipo de unidades pueden ejecutarse simultáneamente, son conocidas normalmente como ***Tareas*** o ***Procesos***, para que este tipo de unidades puedan ser ejecutadas se tienen que cumplir una serie de condiciones, primero el equipo en donde se lo va a ejecutar tenga una arquitectura multiprocesador o multinucleo, en segundo lugar el sistema operativo de esa máquina debe reconocer y detectar los hilos y por último el lenguaje de programación debe proveer los mecanismos y herramientas necesarios para que el programador puede realizar tareas en paralelo. Por ejemplo, Java con los *Treads* y ADA con las *Tasks*.
+Este tipo de unidades pueden ejecutarse simultáneamente, son conocidas normalmente como ***Tareas*** o ***Procesos***, para que este tipo de unidades puedan ser ejecutadas se tienen que cumplir una serie de condiciones, primero el equipo en donde se lo va a ejecutar debe poseer una arquitectura multiprocesador o multinucleo, en segundo lugar el sistema operativo de esa máquina debe reconocer y detectar los hilos y por último el lenguaje de programación debe proveer los mecanismos y herramientas necesarios para que el programador puede realizar tareas en paralelo. Por ejemplo, Java con la clase *Treads* y ADA con las *Tasks*.
 
 >[!note] Nota
 >Al momento de la implementación de este tipo de mecanismos se debe tener en cuenta una serie de cosas, en primer lugar si las variables a las que van a acceder las distintas tareas van a requerir sincronización o no, en segundo lugar como el lenguaje va a proveer el mecanismo para la intercomunicación entre las tareas, si va a ser a través de memoria compartida o por pasaje de mensajes.
