--- a/3° Año/Sistemas Operativos/Unidad 3/1. Introducción a Memoria.md
+++ b/3° Año/Sistemas Operativos/Unidad 3/1. Introducción a Memoria.md
@@ -14,3 +14,67 @@ Debido a la incompatibilidad de algunos de los criterios para la creación de me
 3. **Segmentos Múltiples**: Lógicamente, los programas están contiguos en memoria, pero físicamente los programas están fragmentados y dispersos por todo el disco duro.
 4. **Código Compartido:** Cuando se carga en memoria dos aplicaciones y estas comparten código
 
+### Protección de los Espacios de Memoria
+
+Con la multiprogramación existen múltiples procesos cargados en memoria principal, es por eso que los sistemas operativos deben poseer un mecanismo que lo proteja a posibles accesos a su espacio de direcciones, no solo eso, sino que también se debe proteger a los procesos de usuarios de no ser accedido por los demás procesos, para esto se inventó el mecanismo de los registros límites, mediante el cual el sistema operativo establece un ***registro base*** y otro ***registro límite***, donde el proceso solo puede acceder a las direcciones de memoria que se encuentran entre esos registros límite.
+
+>[!note] Nota
+>El sistema operativo, debido a que se ejecuta en modo *kernel*, tiene acceso sin restricción a toda la memoria principal, esto le permite cargar los procesos de usuario y en caso de que surja algún error volcar ese proceso a memoria virtual.
+
+#### Reasignación de Direcciones
+
+La reasiganación de direcciones no es más que la acción de convertir un tipo de direcciones en otra, habitualmente todas las direcciones de un programa fuente son simbólicas, el compilador convierte estas direcciones simbólicas en direcciones reasignables, que luego cuando sean cargadas en memoria se convertirán en direcciones absolutas de memoria.
+La reasignación de las instrucciones y los datos a direcciones de memoria pueden realizarse en cualquiera de los siguientes pasos:
+
+- **Tiempo de Compilación**: Si se sabe al momento de realizar la compilación donde es que se va a ubicar en memoria el proceso, el compilador puede generar direcciones absolutas de memoria desde el primer momento y posteriormente ser cargado en esas direcciones de memoria.
+- **Tiempo de Carga**: Si no conocemos en tiempo de compilación donde va a residir el proceso en memoria, el compilador deberá generar código reubicable, y en este caso se postergará la reasignación de memoria para el momento en el que se carga el programa.
+- **Tiempo de Ejecución**: Si el proceso puede desplazarse durante su ejecución desde un segmento de memoria a otro, entonces en necesario retardar la reasignación hasta el instante de la ejecución.
+
+>[!tldr] Mapeo de Memoria
+>El mapeo de memoria consiste en convertir las direcciones lógicas solicitadas por el procesador en direcciones físicas, esto se logra en muchos casos mediante la MMU (Memory Management Unit), que toma esa dirección lógica y le suma el registro de reubicación, dando como resultado la siguiente instrucción que se debe ejecutar.
+>Este esquema resulta útil, ya que permite que el espacio del sistema operativo se agrande o achique de acuerdo a sus necesidades.
+
+#### Asignación de Memoria
+
+A la hora de asignar las celdas de memoria en donde va a residir nuestros procesos, existen dos modelos, el primero consiste en partir a la memoria en partes de igual tamaña o algunas más grandes y otras más pequeñas, lo importante a resaltar de este método es que el grado de multiprogramación va a ser fijado por la cantidad de particiones de la memoria, a este modelo se lo llama ***modelo particiones fijas***, en este modelo, los procesos son asignados al *agujero* en el que este pueda entrar y en el caso de que le sobre espacio, este se desperdiciará.
+En el otro modelo nosotros tendremos aun así la memoria partida en una determinada cantidad de partes, pero en este caso se toma a todas esos segmentos de memoria y los interpreta como si fuera un gran *agujero*, de este modo nosotros podemos asignar a más de un proceso a un mismo segmento de memoria y hacer uso más eficiente de la memoria. A este modelo es llamado ***modelo de particiones dinámicas***.
+Para ambos modelos existen una serie de algoritmos que van a establecer la manera en la que se van colocando los procesos en la memoria principal, estos algoritmos son los siguientes:
+
+- **Primer Ajuste**: Se asigna el primer agujero libre que encuentre, la exploración de la memoria siempre comienza desde el principio de los agujeros.
+- **Segundo Ajuste**: Se asigna el agujero libre que primero encuentre, pero la exploración se comienza desde el último punto en donde se terminó.
+- **Mejor Ajuste**: Se asigna el agujero más pequeño en el que pueda entrar el proceso, se debe explorar la lista completa, a no ser que la lista de agujeros esté ordenada según su tamaño.
+- **Peor Ajuste**: Se asigna el agujero más grande que se encuentre en ese momento, pasa lo mismo que en *mejor ajuste*, es decir, se tiene que explorar toda la lista a no ser que ésta esté ordenada. Esta técnica genera el agujero más grande con respecto al tamaño original del agujero.
+
+>[!tldr] Fragmentación
+>La ***fragmentación externa***, se da cuando el espacio total de memoria libre es suficiente como para albergar otro proceso, pero estos espacios o agujeros no se encuentran de forma continua.
+>La ***fragmentación interna***, surge cuando un proceso es asignado a una porción de memoria más grande de lo que él necesita.
+
+### Paginación
+
+La paginación es un esquema de gestión de memoria que permite que el espacio de direcciones físico de un proceso no sea contiguo. El método básico para implementar la paginación consiste en descomponer la memoria física en una serie de bloques de tamaño fijo denominados ***marcos***, y descomponer la memoria lógica en bloques de del mismo tamaño denominados ***páginas***. En este esquema, toda dirección de memoria generada por la CPU está dividida en dos partes: un **número de página**, que se utiliza como índice para la tabla de páginas, y el **desplazamiento de páginas,** que se suma a la dirección base de la página para indicar la dirección de memoria física que se tiene que se envía a la unidad de memoria.
+
+#### Tablas de Páginas Multinivel
+
+Cuando el tamaño de las páginas es grande, también lo son las tablas de páginas, por lo que se decidió por fragmentar las tablas de páginas, este enfoque reduce el desperdicio de memoria. Estas tablas de páginas pueden ser de segundo nivel e incluso de tercer nivel.
+
+#### Tablas de Páginas Invertidas
+
+Las tablas de páginas invertidas tienen una entrada por cada página real de la memoria. Cada entrada está constituida de la dirección virtual de la página almacenada en dicha ubicación de memoria real, e incluye información acerca del proceso que posee esa página. Por lo tanto, en el sistema solo habrá una sola tabla de páginas y dicha tabla tendrá una entrada por cada página de memoria física.
+
+>[!tldr] Fallo de Página
+>El fallo de página se genera cuando el procesador solicita una instrucción que se encuentra en una página que no tiene asignado ningún marco en la memoria principal, si eso sucede la MMU pasa el control al Sistema Operativo y trae a memoria principal la página donde se encuentra dicha dirección. La secuencia de pasos que se sigue es la siguiente:
+>1. La dirección lógica solicitada se encuentra en una página ausente de la memoria principal.
+>2. Se genera un llamado o trap al Sistema Operativo y el proceso se pose en estado de *espera*.
+>3. El Sistema Operativo busca un marco libre para la página a subir a memoria principal.
+>4. Se asigna el procesador a otro proceso.
+>5. Cuando la E/S termine el proceso pasará a estado de *listo*.
+
+Las tablas de páginas cuenta con una serie de bits que utilizan como indicadores para una serie de cuestiones, a continuación enumeraremos estos bits y sus usos:
+
+- **Bit de Presencia**: El 1 indica que la página tiene un marco asociado, es decir, que se encuentra en memoria principal. Cuando el bit está en 0 indica que la página no se encuentra en memoria principal.
+- **Bit de Protección**: Consiste en dos bits, que de acuerdo a su combinación significaran los permisos con los que cuenta esa página:
+	- 10 -> solo lectura.
+	- 01 -> lectura escritura.
+	- 11 -> lectura, escritura y ejecución.
+- **Bit Modificado**: Cuando el bit es 1 nos indica que el marco asociado a la página ha sido modificado, cunado este es 0 índica que el marco asociado a la página no ha sido modificado.
+- **Bit de Referencia**: Este bit es utilizado por algunos algoritmos de reemplazo de página. Cuando el bit está en 1 indica que la página ha sido referenciada, y cunado el bit es 0 indica que la página no ha sido referenciada.
