Se acomodo la unidad 3 de MI

--- a/3° Año/Metodología de la Investigación/3. Proceso Metodológico y sus Dimensiones.md
+++ b/3° Año/Metodología de la Investigación/3. Proceso Metodológico y sus Dimensiones.md
@@ -6,14 +6,17 @@ La investigación puede ser clasificada según 3 diferentes perspectivas.
 2. Enfoque: métodos de investigación que son utilizados como parte del proceso de investigación. Ejemplo: Caso de estudio, evaluación experimental, survey, demostraciones
 3. Naturaleza: Investigación básica, revisión de investigación básica y evaluación de su aplicabilidad, investigación aplicada.
 
-El abordaje investigativo se nutre de las fuentes del conocimiento a través del razonamiento deductivo o del inductivo. En el aprendizaje por inducción, también conocido como bottom-up, la conclusión se alcanza observando ejemplos y generalizando desde estos.
-En cambio, defender teorías por deducción o también llamada top-down, lo que hacemos es utilizando afirmaciones generales, llegar a afirmaciones específicas.
+El abordaje investigativo se nutre de las fuentes del conocimiento a través del razonamiento deductivo o del inductivo. En el aprendizaje por inducción (bottom-up), la conclusión se alcanza observando ejemplos y generalizando desde estos. En cambio, defender teorías por deducción (top-down), lo que hacemos es, utilizando afirmaciones generales, llegar a afirmaciones específicas.
 
 ## Metodología en la Investigación
 
-La ***metodología*** incluye el estudio de varios métodos que son aplicables a una clase de problemas. Las técnicas, por su parte, se refiere a herramientas específicas que permiten adquirir conocimiento, análisis de datos, así como inferencias que pueden ser hechas.
-La metodología ***dependiendo de la motivación***. Si se desea realizar una **investigación básica**, contribuye a un entendimiento teórico profundo y una formulación más abstracta del fenómeno estudiado. Mientras que si se desea realizar una **investigación Instrumental**, contribuye a la intervención humana en entornos del mundo real, aquí dos categorías son identificadas, la investigación aplicada y Investigación orientada a problemas.
-Al mismo tiempo, va ***dependiendo de acuerdo a la Teoría Subyacente***.
+La metodología en la investigación es el enfoque general que se elige para abordar un problema, y las técnicas son las herramientas específicas utilizadas en ese enfoque. La elección de la metodología puede depender de la motivación detrás de la investigación y estar influenciada por la ***teoría subyacente*** que la respalda, ya que la teoría subyacente proporciona una base conceptual sólida y una dirección para el diseño de la investigación y la interpretación de los resultados.
+
+>[!example] Ejemplo
+>Si el objetivo principal es obtener un entendimiento teórico profundo y desarrollar una formulación abstracta del fenómeno estudiado, se está realizando una **investigación básica**.
+>Por otro lado, si la investigación tiene como objetivo intervenir o influir en situaciones del mundo real, se está realizando una **investigación instrumental**. Dentro de la investigación instrumental, se distinguen dos categorías:
+>- La **investigación aplicada**, que busca resolver problemas prácticos.
+>- La **investigación orientada a problemas**, en donde primero se plantea un problema específico y luego se seleccionan las herramientas que se va a utilizar.
 
 - **Descriptivo**, de todos los aspectos significativos del dominio.
 - **Explicativo**, del comportamiento del fenómeno estudiado.
@@ -27,21 +30,24 @@ Por último, la metodología va a variar ***dependiendo del Dominio de Conocimie
 
 #### Investigación Tradicional
 
-La investigación científica tradicional se basa en el pensamiento positivista, de las cuales a través de las observaciones es posible construir Teorías tratando de explicar lo que está siendo observado. Las teorías son expresadas en forma deductiva o utilizando axiomas y postulados, los cuales luego son operados usando la lógica.
-Las observaciones que vienen del Mundo Real, se llaman empíricas, y son relevantes en dos situaciones: durante la formulación del conocimiento teórico a través de observaciones pasivas y durante la verificación de Hipótesis, recolectando información en una forma más activa, aunque guiada por esa misma teoría.
-Cuando no disponemos de una teoría adecuada, tenemos que realizar ‘Investigación exploratoria’ donde los experimentos y la interpretación están abiertos, no guiado por una teoría y poniendo a disposición el conocimiento empírico que pueden postular otras teorías.
-En resumen, en la ciencia tradicional o convencional, las nuevas Hipótesis se extraen de la Teoría existente, se testean y los nuevos resultados se agregan a esa Teoría. Por tanto, esto implica la preexistencia de:
-- Un cuerpo de conocimiento teórico
-- Un marco teórico explícito para guiar la investigación.
-- Definición de los problemas que deben investigarse.
-- ¿Cuáles son las Hipótesis explícitas que podrían refutarse como falsas?
-- Método para Investigación Aplicada y técnicas bien definidas para probar la Hipótesis.
+La investigación científica tradicional se basa en el pensamiento positivista, donde se utilizan observaciones para construir teorías y explicar lo que se observa. Estas teorías se expresan de manera deductiva o mediante axiomas y postulados, y luego se aplican la lógica para operar con ellas.
+Cuando no tenemos una teoría adecuada, se realiza investigación exploratoria, donde los experimentos y la interpretación son abiertos y no están guiados por una teoría preexistente. En este caso, se utiliza el conocimiento empírico que puede servir como base para otras teorías.
+En la ciencia tradicional, las nuevas hipótesis se derivan de teorías existentes, se prueban y los nuevos resultados se incorporan a esas teorías. Esto implica la necesidad de tener:
+
+- Un conjunto de conocimientos teóricos.
+- Un marco teórico explícito que guía la investigación.
+- Definiciones claras de los problemas a investigar.
+- Hipótesis explícitas que pueden ser refutadas como falsas.
+- Un método de investigación aplicada y técnicas bien definidas para probar las hipótesis.
+
+>[!note] Nota
+>Las observaciones empíricas puede servir para la construcción de nuevas teorías a partir de las observaciones positivas, además resulta útil a la hora de verificar una hipótesis recopilando información de manera más activa, aunque guiado por una teoría.
 
 #### Investigación Interpretativa
 
-Se preocupa por tratar de comprender la experiencia vivida y por cómo los propios participantes dan sentido a sus experiencias. Por lo tanto, se preocupa por los significados que esas experiencias tienen para los participantes. El método de investigación interpretativo es fenomenológico en el sentido de que desea explorar la percepción personal o estado de un individuo en lugar de intentar producir un registro objetivo del evento o estado en sí. El método interpretativo es pos-positivista, critica la "quimera" científica (convencional), declara la imposibilidad de la observación objetiva, y las observaciones y las interpretaciones dependen del observador.
+La investigación interpretativa se centra en comprender la experiencia vivida por las personas y cómo es que los participantes en una investigación atribuyen significado a sus propias experiencias. En lugar de tratar de producir un registro objetivo de un evento o estado, se concentra en comprender cómo una persona experimenta y da significado a ese evento o estado en particular. La investigación interpretativa adopta una perspectiva ***pos-positivista***, es decir, cuestiona la posibilidad de lograr una observación completamente objetiva.
 
->[!tldr] Dificultades para la objetividad:
+>[!tldr] Dificultades para la Objetividad:
 >La participación de los investigadores en el ámbito de la investigación puede afectar a la objetividad, y a los resultados en función de la propia perspectiva del investigador. También se puede ver afectada por otros aspectos externos al factor humano, como pueden ser:
 >- La selección y definición del dominio o subdominio de la investigación.
 >- La selección de una teoría preexistente.
@@ -62,10 +68,10 @@ La tecnología es muy importante, ya que son el conjunto de dispositivos, artefa
 
 ##  Técnicas en la Investigación
 
-1. Las **Técnicas no empíricas** dependen de los datos creados artificialmente, o incluye investigación conceptual basada en opiniones y especulaciones (análisis dialéctico y argumentativo). Y de realizar las pruebas de teoremas: Aplicación de métodos formales, Inducción, Abstracciones matemáticas, Verificación de modelos, Simulación, es decir, mapear un entorno complejo en un modelo simplificado. Otras técnicas no empíricas usan escenarios hipotéticos futuros o realizan mapeos de un escenario real en juegos.
-2. Las **Técnicas positivistas** son aplicables a disciplinas de la Ingeniería, son un conjunto de Técnicas para pronosticar aplicando: Algoritmos de regresión y algoritmos basados en series temporales para extrapolar sobre datos históricos. Al mismo tiempo que se realizan experimentos de campo y experimentos de laboratorio.
-3. Las **Técnicas de investigación Interpretativo** optan por un enfoque descriptivo/interpretativo, pasando de observaciones empíricas a un análisis riguroso limitado. Existe una necesidad de controlar la perspectiva del investigador, realizando autoexamen crítico, revisando todos los postulados y sesgos, realizando observaciones variables, enviar a revisar el proyecto por otros pares. Al mismo tiempo, pujando por la investigación grupal, incentiva a una discusión frecuente con un grupo de personas, incluyendo quién puede verse afectado por la aplicación o la tecnología. Todo esto utilizando herramientas de trabajo colaborativo.
-4. **Técnicas en la frontera del positivismo/interpretativismo**
+1. Las **Técnicas no empíricas** se basan en datos creados artificialmente, o incluye investigación conceptual basada en opiniones y especulaciones (análisis dialéctico y argumentativo). Y de realizar las pruebas de teoremas a través de la aplicación de métodos formales, inducción, abstracciones matemáticas, verificación de modelos, simulación. Es decir, mapear un entorno complejo en un modelo simplificado. Otras técnicas no empíricas usan escenarios hipotéticos futuros o realizan mapeos de un escenario real en juegos.
+2. Las **Técnicas positivistas** son aplicables a disciplinas de la Ingeniería, son un conjunto de técnicas para pronosticar aplicando: Algoritmos de regresión y algoritmos basados en series temporales para extrapolar sobre datos históricos. Al mismo tiempo que se realizan experimentos de campo y experimentos de laboratorio.
+3. Las **Técnicas de investigación Interpretativo** pasan de observaciones empíricas a un análisis riguroso limitado. Se centra en describir y comprender fenómenos mediante la interpretación de datos. Requieren un enfoque crítico, la revisión de sesgos, la observación de múltiples variables y la colaboración con otros investigadores y participantes. La calidad y la objetividad son esenciales en este enfoque, y se utilizan herramientas colaborativas para facilitar el proceso de investigación.
+4. **Técnicas en la frontera del positivismo/interpretativismo**, es un punto medio entre las técnicas basadas en el positivismo y las pos-positivistas.
 	- Trabajo de campo: Los datos relacionados con el objeto de estudio son directamente observados por el Investigador en el contexto original.
 	- Basada en cuestionarios: recopilación de datos estructurados obtenida desde entrevistados.
 	- Caso de estudio: Aislar y describir una situación relevante del mundo real, reuniendo una colección de datos de múltiples fuentes.
@@ -84,7 +90,7 @@ La tecnología es muy importante, ya que son el conjunto de dispositivos, artefa
 Existen una variedad de paradigmas de la investigación científica:
 
 1. **Método Positivista**: Asume que la realidad es objetivamente accesible, puede ser medida y descrita por el observador y medida a través de instrumentos y dispositivos. Se realizan pruebas que permiten realizar predicciones sobre fenómenos futuros.
-2. **Método Interpretativo**: Asume que el acceso a la realidad solo es posible a través de construcciones sociales como el lenguaje, la conciencia y las ontologías (compartir el significado de los conceptos). Es una filosofía basada en la hermenéutica, es decir, basada en la comprensión humana y la interpretación de textos, así como en la fenomenología. Se opone al pensamiento positivista del siglo XIX.
+2. **Método Interpretativo**: Asume que el acceso a la realidad solo es posible a través de construcciones sociales como el lenguaje, la conciencia y la ontología. Es una filosofía basada en la ***hermenéutica***, es decir, basada en la comprensión humana y la interpretación de textos, así como en la fenomenología. Se opone al pensamiento positivista del siglo XIX.
 3. **Teoría Crítica**: Cuenta como base metodológica la investigación-acción. Consta de tres fases que, presentadas en forma cíclica, generan una retroalimentación constante, hasta que el problema del grupo social en investigación es resuelto. El investigador busca generar un cambio y liberación de opresiones en un determinado contexto social.
 	1. Observar, que constituye la construcción de un diagrama del problema de estudio y la recolección de datos.
 	2. Pensar, el cual comprende el análisis e interpretación de la construcción significante encontrada.
@@ -93,7 +99,7 @@ Existen una variedad de paradigmas de la investigación científica:
 >[!tldr] Aspectos Característicos del Paradigma Crítico
 > - Posee una visión holística y dialéctica de lo que se concibe como real.
 > - La relación entre el investigador y el fenómeno de estudio se caracteriza porque todos los sujetos que participan en el proceso investigativo son activos y comprometidos con el cambio social.
-> - El proceso investigativo se genera en la acción.
+> - El proceso investigativo se genera en la acción, es decir, en intentar implementar ese cambio.
 > - La búsqueda de una transformación de las estructuras sociales, basada en la liberación y manumisión de los individuos que conforman el contexto social de investigación.
 
-4. **Constructivismo**: Busca contrastar las disciplinas naturales o exactas con las de tipo social. El constructivismo es un sustento para la investigación cualitativa, donde la realidad se la construye socialmente desde diversas formas de percibirla, el saber se construye de forma social por los participantes en el proceso investigativo. La investigación no es ajena a los valores del investigador y los resultados no pueden ser generalizados en forma ajena al contexto y el tiempo.
+4. **Constructivismo**: Busca contrastar las disciplinas naturales o exactas con las de tipo social. Es un enfoque que destaca la construcción social de la realidad y el papel de los valores y la perspectiva del investigador en la investigación. Es especialmente relevante en la investigación cualitativa y en las disciplinas sociales, donde se reconoce que el conocimiento y la comprensión de la realidad son subjetivos y están influenciados por el contexto social y cultural.
